Fix right margin to prevent content getting cut off

--- a/src/main/content/_assets/css/commonConfigFeature.css
+++ b/src/main/content/_assets/css/commonConfigFeature.css
@@ -99,7 +99,7 @@ html, body, main {
 #content, #toc_inner {
     height: 100%;
     overflow-y: scroll;
-    margin-right: -50px;  /* hide the scroll bar */
+    margin-right: -25px;  /* hide the scroll bar */
     padding-right: 50px;
 }
 
